# filemaker-sql

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  inventory.test.fmp12  inventory_test.fmp12  pyproject.toml  pytest.ini  requirements.txt
fmsql/: functions.py  utils.py
src/filemaker_sql/: __main__.py
src/filemaker_sql/cli/: __init__.py
src/fmsql/: __init__.py  __main__.py  dialects.py  functions.py  settings.py  utils.py
src/fmsql/cli/: __init__.py
tests/: conftest.py  connect_test.py  inventory_test.fmp12  query_insert_test.py  query_select_test.py  schema_test.py  test_utils.py
